# strands-agui-agent

./: .gitignore  README.md  pyproject.toml
examples/: simple_agent.py  test_client.py
src/strands_agui_agent/: __init__.py  __main__.py  agent.py  agui_types.py  cli.py  config.py  encoder.py  server.py
